# slower

./: .gitignore  Cargo.toml  LICENSE  default.nix  shell.nix
.github/workflows/: build.yml  release-drafter.yml
src/: lib.rs  main.rs
