[package]
name = "slower"
version = "0.1.1"
authors = ["Fuzen <me@fuzen.cafe>"]
edition = "2021"
description = "Rate limit stdout output"
categories = ["command-line-utilities"]
exclude = ["/*.nix", "/result"]
license = "MIT"
repository = "https://github.com/fuzen-py/slower"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
